--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-email/render": "^1.2.3",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tabler/icons": "^3.35.0",
+    "@tabler/icons-react": "^3.35.0",
     "ai": "^5.0.47",
     "bcryptjs": "^3.0.2",
     "better-auth": "^1.3.12",
